--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       top: 1.25rem;
       bottom: -1.25rem;
       width: 2px;
-      background-color: #e5e7eb; /* gray-200 */
+      background-color: rgba(255, 255, 255, 0.2); /* Lighter line for dark bg */
       transform: translateX(-50%);
     }
     .timeline-item:last-child::before {
@@ -92,7 +92,7 @@
   </section>
 
   <!-- In-House Drive Section -->
-  <section class="py-20 md:py-32 bg-[#3F5FDD]">
+  <section class="py-20 md:py-32 bg-[#0A1A62]">
     <div class="container mx-auto px-6">
       <div class="text-center max-w-4xl mx-auto mb-16 fade-in-section">
         <h2 class="text-4xl md:text-6xl font-bold text-white">Your external team should feel like a top in-house team.</h2>
@@ -192,83 +192,83 @@
   </section>
 
   <!-- Our Proven Process Section -->
-  <section id="process" class="py-20 md:py-32 bg-blue-50">
+  <section id="process" class="py-20 md:py-32 bg-[#3F5FDD]">
     <div class="container mx-auto px-6">
       <div class="text-center max-w-4xl mx-auto mb-20 fade-in-section">
-        <h2 class="text-5xl md:text-6xl font-bold text-gray-900">Our Proven Process</h2>
+        <h2 class="text-5xl md:text-6xl font-bold text-white">Our Proven Process</h2>
       </div>
 
       <div class="max-w-3xl mx-auto">
         <!-- Timeline Items -->
         <div class="relative">
           <div class="timeline-item pb-16 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
-              <span class="text-blue-600 font-bold text-lg">1</span>
+            <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#3F5FDD]">
+              <span class="text-white font-bold text-lg">1</span>
             </div>
-            <h3 class="text-3xl font-bold text-gray-900 mb-2">Introduction Call</h3>
-            <p class="text-lg font-semibold text-gray-500 mb-3">A conversation to explore your vision and our process</p>
-            <p class="text-xl text-gray-600">We hold a structured, two-way conversation to understand your vision, challenges, and goals. We'll provide a transparent overview of our process, ensuring we both have a confident decision on our fit as partners.</p>
+            <h3 class="text-3xl font-bold text-white mb-2">Introduction Call</h3>
+            <p class="text-lg font-semibold text-gray-300 mb-3">A conversation to explore your vision and our process</p>
+            <p class="text-xl text-gray-200">We hold a structured, two-way conversation to understand your vision, challenges, and goals. We'll provide a transparent overview of our process, ensuring we both have a confident decision on our fit as partners.</p>
           </div>
           <div class="timeline-item pb-16 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
-              <span class="text-blue-600 font-bold text-lg">2</span>
+            <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#3F5FDD]">
+              <span class="text-white font-bold text-lg">2</span>
             </div>
-            <h3 class="text-3xl font-bold text-gray-900 mb-2">Clarify the Why</h3>
-            <p class="text-lg font-semibold text-gray-500 mb-3">Uncovering Your Purpose.</p>
-            <p class="text-xl text-gray-600">We dig deep to get to the heart of your project's 'why' and what success truly looks like. By mapping out your product needs against practical limits like budget and timeline, we create a feasible roadmap for your vision.</p>
+            <h3 class="text-3xl font-bold text-white mb-2">Clarify the Why</h3>
+            <p class="text-lg font-semibold text-gray-300 mb-3">Uncovering Your Purpose.</p>
+            <p class="text-xl text-gray-200">We dig deep to get to the heart of your project's 'why' and what success truly looks like. By mapping out your product needs against practical limits like budget and timeline, we create a feasible roadmap for your vision.</p>
           </div>
           <div class="timeline-item pb-16 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
-              <span class="text-blue-600 font-bold text-lg">3</span>
+            <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#3F5FDD]">
+              <span class="text-white font-bold text-lg">3</span>
             </div>
-            <h3 class="text-3xl font-bold text-gray-900 mb-2">Proposal</h3>
-            <p class="text-lg font-semibold text-gray-500 mb-3">Creating the game plan for the winning team.</p>
-            <p class="text-xl text-gray-600">Building on our shared understanding, we present your tailored game plan. This comprehensive proposal clearly outlines the cost, deliverables, timeline, and team structure, giving you full confidence in the path ahead.</p>
+            <h3 class="text-3xl font-bold text-white mb-2">Proposal</h3>
+            <p class="text-lg font-semibold text-gray-300 mb-3">Creating the game plan for the winning team.</p>
+            <p class="text-xl text-gray-200">Building on our shared understanding, we present your tailored game plan. This comprehensive proposal clearly outlines the cost, deliverables, timeline, and team structure, giving you full confidence in the path ahead.</p>
           </div>
           <div class="timeline-item pb-16 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
-              <span class="text-blue-600 font-bold text-lg">4</span>
+            <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#3F5FDD]">
+              <span class="text-white font-bold text-lg">4</span>
             </div>
-            <h3 class="text-3xl font-bold text-gray-900 mb-2">Build Mode: ON</h3>
-            <p class="text-lg font-semibold text-gray-500 mb-3">Building with Confidence, From Day One.</p>
-            <p class="text-xl text-gray-600">With the game plan in place, we translate high-level requirements into actionable tasks. Our team establishes a clear collaboration protocol and primes the technical environment for a purposeful and efficient build.</p>
+            <h3 class="text-3xl font-bold text-white mb-2">Build Mode: ON</h3>
+            <p class="text-lg font-semibold text-gray-300 mb-3">Building with Confidence, From Day One.</p>
+            <p class="text-xl text-gray-200">With the game plan in place, we translate high-level requirements into actionable tasks. Our team establishes a clear collaboration protocol and primes the technical environment for a purposeful and efficient build.</p>
           </div>
           <div class="timeline-item pb-16 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
-              <span class="text-blue-600 font-bold text-lg">5</span>
+            <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#3F5FDD]">
+              <span class="text-white font-bold text-lg">5</span>
             </div>
-            <h3 class="text-3xl font-bold text-gray-900 mb-2">Pulse</h3>
-            <p class="text-lg font-semibold text-gray-500 mb-3">See your vision manifest – two weeks at a time.</p>
-            <p class="text-xl text-gray-600">Your project comes alive in a steady "Pulse" of focused, two-week development cycles. This rhythm makes progress visible and maintains alignment, culminating in our core promise: a demonstration of a working software every two weeks.</p>
+            <h3 class="text-3xl font-bold text-white mb-2">Pulse</h3>
+            <p class="text-lg font-semibold text-gray-300 mb-3">See your vision manifest – two weeks at a time.</p>
+            <p class="text-xl text-gray-200">Your project comes alive in a steady "Pulse" of focused, two-week development cycles. This rhythm makes progress visible and maintains alignment, culminating in our core promise: a demonstration of a working software every two weeks.</p>
           </div>
           <div class="timeline-item pb-16 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
-              <span class="text-blue-600 font-bold text-lg">6</span>
+            <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#3F5FDD]">
+              <span class="text-white font-bold text-lg">6</span>
             </div>
-            <h3 class="text-3xl font-bold text-gray-900 mb-2">The Quality Gate</h3>
-            <p class="text-lg font-semibold text-gray-500 mb-3">Your Green Light for a Confident Launch.</p>
-            <p class="text-xl text-gray-600">Before launch, we ensure total readiness. Every feature is rigorously tested against our highest standards, and we prepare your operational environment and empower your team for a seamless, confident go-live.</p>
+            <h3 class="text-3xl font-bold text-white mb-2">The Quality Gate</h3>
+            <p class="text-lg font-semibold text-gray-300 mb-3">Your Green Light for a Confident Launch.</p>
+            <p class="text-xl text-gray-200">Before launch, we ensure total readiness. Every feature is rigorously tested against our highest standards, and we prepare your operational environment and empower your team for a seamless, confident go-live.</p>
           </div>
           <div class="timeline-item pb-12 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
-              <span class="text-blue-600 font-bold text-lg">7</span>
+            <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#3F5FDD]">
+              <span class="text-white font-bold text-lg">7</span>
             </div>
-            <h3 class="text-3xl font-bold text-gray-900 mb-2">Beyond Launch</h3>
-            <p class="text-lg font-semibold text-gray-500 mb-3">Your Partner in Continuous Growth and Evolution.</p>
-            <p class="text-xl text-gray-600">With your solution live, our focus shifts to ensuring its ongoing success. We provide robust support and proactive monitoring, turning system insights into actionable intelligence that informs your next strategic move.</p>
+            <h3 class="text-3xl font-bold text-white mb-2">Beyond Launch</h3>
+            <p class="text-lg font-semibold text-gray-300 mb-3">Your Partner in Continuous Growth and Evolution.</p>
+            <p class="text-xl text-gray-200">With your solution live, our focus shifts to ensuring its ongoing success. We provide robust support and proactive monitoring, turning system insights into actionable intelligence that informs your next strategic move.</p>
           </div>
         </div>
       </div>
-      <div class="mt-20 pt-20 border-t border-gray-300 fade-in-section">
+      <div class="mt-20 pt-20 border-t border-white/20 fade-in-section">
         <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
           <div class="md:col-span-2 text-center md:text-left">
-            <h3 class="text-4xl md:text-5xl font-bold text-gray-900">Let’s work together</h3>
-            <p class="text-xl text-gray-600 mt-4">
+            <h3 class="text-4xl md:text-5xl font-bold text-white">Let’s work together</h3>
+            <p class="text-xl text-gray-200 mt-4">
               Reach out to our team to define, make and launch new products, predictably.
             </p>
           </div>
           <div class="text-center md:text-right">
-            <a href="#contact" class="bg-[#3F5FDD] text-white font-semibold px-24 py-6 hover:bg-[#3550B8] transition-colors duration-300 text-xl inline-block">Introduction Call</a>
+            <a href="#contact" class="bg-white text-black font-semibold px-24 py-6 hover:bg-gray-200 transition-colors duration-300 text-xl inline-block">Introduction Call</a>
           </div>
         </div>
       </div>
@@ -406,5 +406,4 @@
 </script>
 </body>
 </html>
-
 
