--- a/index.html
+++ b/index.html
@@ -130,41 +130,8 @@
     </div>
   </section>
 
-  <!-- Trusted By Section -->
-  <section class="py-12 bg-black fade-in-section">
-    <div class="container mx-auto px-6">
-      <div class="grid md:grid-cols-3 gap-12 items-center">
-        <div class="md:col-span-1">
-          <h3 class="text-2xl font-bold text-gray-300 text-center md:text-left">
-            Trusted by industry leaders
-          </h3>
-        </div>
-        <div class="md:col-span-2">
-          <div class="flex flex-wrap items-center justify-center md:justify-start gap-x-10 gap-y-8">
-            <a href="https://www.siemens.com/global/en.html" target="_blank" rel="noopener noreferrer" class="text-3xl font-bold text-gray-400 hover:text-white transition-colors duration-300">
-              SIEMENS
-            </a>
-            <a href="https://www.boeing.com/" target="_blank" rel="noopener noreferrer" class="text-3xl font-bold text-gray-400 hover:text-white transition-colors duration-300">
-              BOEING
-            </a>
-            <a href="https://www.toyota.com/usa" target="_blank" rel="noopener noreferrer" class="text-3xl font-bold text-gray-400 hover:text-white transition-colors duration-300">
-              TOYOTA
-            </a>
-            <a href="https://www.i2sl.org/" target="_blank" rel="noopener noreferrer" class="text-3xl font-bold text-gray-400 hover:text-white transition-colors duration-300">
-              I2SL
-            </a>
-            <a href="https://www.aircuity.com/" target="_blank" rel="noopener noreferrer" class="text-3xl font-bold text-gray-400 hover:text-white transition-colors duration-300">
-              Aircuity
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
   <!-- Complicated Product Section -->
-  <section class="min-h-screen flex items-center bg-white">
+  <section class="py-20 md:py-32 bg-white">
     <div class="container mx-auto px-6">
       <div class="grid md:grid-cols-2 gap-16 items-center">
         <div class="fade-in-section">
@@ -188,6 +155,28 @@
           </div>
         </div>
       </div>
+
+      <!-- Trusted By Logos -->
+      <div class="mt-32 fade-in-section">
+        <div class="flex flex-wrap items-center justify-center gap-x-16 gap-y-8">
+          <a href="https://www.siemens.com/global/en.html" target="_blank" rel="noopener noreferrer">
+            <img src="Siemens-logo-gray.png" alt="Siemens Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
+          </a>
+          <a href="https://www.boeing.com/" target="_blank" rel="noopener noreferrer">
+            <img src="Boeing_full_logo_gray.png" alt="Boeing Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
+          </a>
+          <a href="https://www.toyota.com/usa" target="_blank" rel="noopener noreferrer">
+            <img src="File_Toyota.svg" alt="Toyota Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
+          </a>
+          <a href="https://www.i2sl.org/" target="_blank" rel="noopener noreferrer">
+            <img src="I2SL logo_long.avif" alt="I2SL Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
+          </a>
+          <a href="https://www.aircuity.com/" target="_blank" rel="noopener noreferrer">
+            <img src="Aircuity_AQaas_W-notag.webp" alt="Aircuity Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
+          </a>
+        </div>
+      </div>
+
     </div>
   </section>
 
