--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       background-color: #ffffff; /* White background */
     }
     .gradient-text {
-      background: linear-gradient(to right, #2563eb, #60a5fa); /* Blue gradient */
+      background: linear-gradient(to right, #00BBDD, #3CFEFF); /* New Cyan Gradient */
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
@@ -45,21 +45,21 @@
 <body class="bg-white text-gray-800 antialiased">
 
 <!-- Header -->
-<header id="header" class="bg-black fixed top-0 left-0 right-0 z-50 transition-all duration-300">
+<header id="header" class="bg-[#242D3C] fixed top-0 left-0 right-0 z-50 transition-all duration-300">
   <div class="container mx-auto px-6 py-4 flex justify-between items-center">
     <a href="index.html" class="flex items-center">
-      <img src="StackitLogo2025-A-Extended-White.png" alt="Stackit Logo" class="h-9 w-auto">
+      <img src="logo2025-dark-background.png" alt="Stackit Logo" class="h-9 w-auto">
     </a>
     <div class="flex items-center space-x-6">
-      <a href="tel:619-917-5UDGE" class="text-gray-300 font-semibold hover:text-white transition-colors hidden md:block">(619) 917-5387</a>
-      <a href="#contact" class="bg-[#99C4FE] text-black font-semibold px-6 py-3 text-base hover:bg-[#7BB3FE] transition-colors duration-300">Meet the team</a>
+      <a href="tel:619-917-5387" class="text-gray-300 font-semibold hover:text-white transition-colors hidden md:block">(619) 917-5387</a>
+      <a href="#contact" class="bg-transparent border-2 border-[#00BBDD] text-[#00BBDD] font-semibold px-6 py-3 text-base hover:bg-[#00BBDD] hover:text-white transition-colors duration-300">Meet the team</a>
     </div>
   </div>
 </header>
 
 <main>
   <!-- Hero Section -->
-  <section class="min-h-screen flex items-center bg-black">
+  <section class="min-h-screen flex items-center bg-[#242D3C]">
     <div class="container mx-auto px-6 text-center">
       <div class="max-w-5xl mx-auto">
         <h1 class="text-5xl md:text-7xl lg:text-8xl font-black text-white leading-tight mb-6 fade-in-section">
@@ -69,7 +69,7 @@
           Build extraordinary software, with a partner who shares your standards.
         </p>
         <div class="mt-10 fade-in-section" style="transition-delay: 300ms;">
-          <a href="#contact" class="bg-white text-black font-semibold px-24 py-6 hover:bg-gray-200 transition-colors duration-300 text-xl inline-block">Get Started</a>
+          <a href="#contact" class="bg-white text-black font-semibold px-24 py-6 hover:bg-gray-200 transition-colors duration-300 text-xl inline-block rounded-2xl">Get Started</a>
         </div>
       </div>
     </div>
@@ -84,48 +84,48 @@
           Leaders with great ideas shouldn't have to struggle to find a competent, high-performing team to execute their vision.
         </p>
         <div class="mt-24 flex flex-col sm:flex-row items-center justify-center gap-6">
-          <a href="case-study.html" class="bg-transparent border-2 border-gray-800 text-gray-800 font-semibold px-20 py-5 hover:bg-gray-800 hover:text-white transition-colors duration-300 text-xl inline-block">View Case Studies</a>
-          <a href="#contact" class="bg-[#0A1A62] text-white font-semibold px-24 py-6 hover:bg-[#08144f] transition-colors duration-300 text-2xl inline-block">Let's Discuss</a>
+          <a href="case-study.html" class="bg-transparent border-2 border-gray-800 text-gray-800 font-semibold px-20 py-5 hover:bg-gray-800 hover:text-white transition-colors duration-300 text-xl inline-block rounded-2xl">View Case Studies</a>
+          <a href="#contact" class="bg-[#242D3C] text-white font-semibold px-24 py-6 hover:bg-[#1A202C] transition-colors duration-300 text-2xl inline-block rounded-2xl">Let's Discuss</a>
         </div>
       </div>
     </div>
   </section>
 
   <!-- In-House Drive Section -->
-  <section class="py-20 md:py-32 bg-[#0A1A62]">
+  <section class="py-20 md:py-32 bg-[#12748D]">
     <div class="container mx-auto px-6">
       <div class="text-center max-w-4xl mx-auto mb-16 fade-in-section">
         <h2 class="text-4xl md:text-6xl font-bold text-white">Your external team should feel like a top in-house team.</h2>
-        <p class="text-xl md:text-2xl text-gray-200 mt-6">We deliver that experience.</p>
+        <p class="text-xl md:text-2xl text-white mt-6">We deliver that experience.</p>
       </div>
       <div class="grid md:grid-cols-3 gap-8">
         <!-- Card 1 -->
-        <div class="bg-white/10 p-8 rounded-xl border border-white/20 fade-in-section" style="transition-delay: 100ms;">
+        <div class="bg-white/10 p-8 rounded-xl border border-white/20 backdrop-blur-sm fade-in-section" style="transition-delay: 100ms;">
           <div class="mb-5">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547a2 2 0 00-.547 1.806l.477 2.387a6 6 0 00.517 3.86l.158.318a6 6 0 00.517 3.86l2.387.477a2 2 0 001.806-.547a2 2 0 00.547-1.806l-.477-2.387a6 6 0 00-.517-3.86l-.158-.318a6 6 0 00-.517-3.86l-2.387-.477a2 2 0 00-1.806.547a2 2 0 00-.547 1.806l.477 2.387a6 6 0 00.517 3.86l.158.318a6 6 0 00.517 3.86L15.428 6.572a2 2 0 001.806-.547a2 2 0 00.547-1.806l-.477-2.387a6 6 0 00-.517-3.86l-.158-.318a6 6 0 00-.517-3.86L6.572 15.428z" /></svg>
           </div>
           <h3 class="text-3xl font-bold text-white mb-3">Designed to Integrate</h3>
-          <p class="text-xl text-gray-200">Our <strong>In-House Drive</strong> is defined by three key principles: <strong>rigorous engineering discipline</strong>, <strong>deep collaboration</strong>, and an <strong>ingrained entrepreneurial spirit</strong>.</p>
+          <p class="text-xl text-white">Our <strong>In-House Drive</strong> is defined by three key principles: <strong>rigorous engineering discipline</strong>, <strong>deep collaboration</strong>, and an <strong>ingrained entrepreneurial spirit</strong>.</p>
         </div>
         <!-- Card 2 -->
-        <div class="bg-white/10 p-8 rounded-xl border border-white/20 fade-in-section" style="transition-delay: 200ms;">
+        <div class="bg-white/10 p-8 rounded-xl border border-white/20 backdrop-blur-sm fade-in-section" style="transition-delay: 200ms;">
           <div class="mb-5">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" /></svg>
           </div>
           <h3 class="text-3xl font-bold text-white mb-3">Your Success is Our Success</h3>
-          <p class="text-xl text-gray-200">True Partnerships are forged from the shared pursuit of excellence and the drive to create something truly impactful. It's the foundation we're built on.</p>
+          <p class="text-xl text-white">True Partnerships are forged from the shared pursuit of excellence and the drive to create something truly impactful. It's the foundation we're built on.</p>
         </div>
         <!-- Card 3 -->
-        <div class="bg-white/10 p-8 rounded-xl border border-white/20 fade-in-section" style="transition-delay: 300ms;">
+        <div class="bg-white/10 p-8 rounded-xl border border-white/20 backdrop-blur-sm fade-in-section" style="transition-delay: 300ms;">
           <div class="mb-5">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" /></svg>
           </div>
           <h3 class="text-3xl font-bold text-white mb-3">More Than Just Code</h3>
-          <p class="text-xl text-gray-200">Exceptional Software is the result. As one cohesive team, you get more than just code—you get the perfect storm for innovation.</p>
+          <p class="text-xl text-white">Exceptional Software is the result. As one cohesive team, you get more than just code—you get the perfect storm for innovation.</p>
         </div>
       </div>
       <div class="mt-16 text-center fade-in-section">
-        <a href="#process" class="bg-white text-black font-semibold px-24 py-6 hover:bg-gray-200 transition-colors duration-300 text-xl inline-block">Discover Our Process</a>
+        <a href="#process" class="bg-white text-black font-semibold px-24 py-6 hover:bg-gray-200 transition-colors duration-300 text-xl inline-block rounded-2xl">Discover Our Process</a>
       </div>
     </div>
   </section>
@@ -137,20 +137,20 @@
         <div class="fade-in-section">
           <h2 class="text-5xl md:text-6xl font-bold text-gray-900 leading-tight">We know that creating a great product is complicated.</h2>
           <div class="mt-10">
-            <a href="#contact" class="bg-gray-800 text-white font-semibold px-24 py-6 hover:bg-gray-900 transition-colors duration-300 text-xl inline-block">Let's Talk</a>
+            <a href="#contact" class="bg-gray-800 text-white font-semibold px-24 py-6 hover:bg-gray-900 transition-colors duration-300 text-xl inline-block rounded-2xl">Let's Talk</a>
           </div>
         </div>
         <div class="space-y-8 fade-in-section" style="transition-delay: 150ms;">
           <div class="flex items-start">
-            <svg class="w-8 h-8 text-blue-600 mr-4 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+            <svg class="w-8 h-8 text-[#00BBDD] mr-4 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
             <p class="text-xl text-gray-600">Our <strong>Proven Process</strong> brings structure and discipline to development, replacing chaos with clarity, predictability, and quality.</p>
           </div>
           <div class="flex items-start">
-            <svg class="w-8 h-8 text-blue-600 mr-4 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+            <svg class="w-8 h-8 text-[#00BBDD] mr-4 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
             <p class="text-xl text-gray-600">We make <strong>deep collaboration</strong> a priority, which does more than prevent misunderstandings—it builds the shared purpose and creative energy that define a winning team.</p>
           </div>
           <div class="flex items-start">
-            <svg class="w-8 h-8 text-blue-600 mr-4 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+            <svg class="w-8 h-8 text-[#00BBDD] mr-4 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
             <p class="text-xl text-gray-600">We're <strong>entrepreneurs at heart</strong>. We bring a deep personal stake to your project, transforming your vision into an extraordinary product.</p>
           </div>
         </div>
@@ -257,7 +257,7 @@
             </p>
           </div>
           <div class="text-center md:text-right">
-            <a href="#contact" class="bg-white text-black font-semibold px-24 py-6 hover:bg-gray-200 transition-colors duration-300 text-xl inline-block">Introduction Call</a>
+            <a href="#contact" class="bg-white text-black font-semibold px-24 py-6 hover:bg-gray-200 transition-colors duration-300 text-xl inline-block rounded-2xl">Introduction Call</a>
           </div>
         </div>
       </div>
@@ -266,7 +266,7 @@
 </main>
 
 <!-- Footer -->
-<footer class="bg-black text-white min-h-screen flex items-center">
+<footer class="bg-[#242D3C] text-white min-h-screen flex items-center">
   <div class="container mx-auto px-6">
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
       <!-- Left: Get In Touch -->
@@ -327,19 +327,19 @@
           <div class="space-y-6">
             <div>
               <label for="full-name" class="block text-sm font-medium text-gray-700">Full Name</label>
-              <input type="text" name="full-name" id="full-name" autocomplete="name" class="mt-1 block w-full px-4 py-3 border border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg">
+              <input type="text" name="full-name" id="full-name" autocomplete="name" class="mt-1 block w-full px-4 py-3 border border-gray-300 shadow-sm focus:ring-[#00BBDD] focus:border-[#00BBDD] text-lg">
             </div>
             <div>
               <label for="contact-info" class="block text-sm font-medium text-gray-700">Email or Phone Number</label>
-              <input type="text" name="contact-info" id="contact-info" class="mt-1 block w-full px-4 py-3 border border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg">
+              <input type="text" name="contact-info" id="contact-info" class="mt-1 block w-full px-4 py-3 border border-gray-300 shadow-sm focus:ring-[#00BBDD] focus:border-[#00BBDD] text-lg">
             </div>
             <div>
               <label for="message" class="block text-sm font-medium text-gray-700">What do you want to build?</label>
-              <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 border border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg"></textarea>
+              <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 border border-gray-300 shadow-sm focus:ring-[#00BBDD] focus:border-[#00BBDD] text-lg"></textarea>
             </div>
           </div>
           <div class="mt-8">
-            <button type="submit" class="w-full bg-[#3F5FDD] text-white font-semibold px-24 py-6 hover:bg-[#3550B8] transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#3F5FDD] text-xl inline-block">
+            <button type="submit" class="w-full bg-[#00BBDD] text-white font-semibold px-24 py-6 hover:bg-[#00AACC] transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#00BBDD] text-xl inline-block rounded-2xl">
               Send
             </button>
           </div>
