--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <img src="I2SL logo_long.avif" alt="I2SL Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
                     </a>
                     <a href="https://www.aircuity.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="Aircuity_AQaas_W-notag.webp" alt="Aircuity Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
+                        <img src="aircuity_logo.png" alt="Aircuity Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
                     </a>
                 </div>
             </div>
